# Prometheus

./: .clang-format  .gitignore  LICENSE  README.md  config.txt  imgui.ini
.github/workflows/: cmake.yml  ubuntu_release.yml
config/: preinit.lua
docs/: notes.md  vulkan_setup.md
shaders/: triangle.vert
src/: CMakeLists.txt  config.cpp  config.h  configuration.h  errors.cpp  errors.h  main.cpp
src/physicsengine/: CMakeLists.txt  physicsengine.cpp  physicsengine.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h  rendererlogicaldevice.cpp  rendererlogicaldevice.h  rendererphysicaldevice.cpp  rendererphysicaldevice.h  rendererutils.cpp  rendererutils.h  shadermodulemanager.cpp  shadermodulemanager.h  vulkanhandlemanager.cpp  vulkanhandlemanager.h  vulkaninstance.cpp  vulkaninstance.h  vulkanlogicaldevice.cpp  vulkanlogicaldevice.h  vulkanphysicaldevice.cpp  vulkanphysicaldevice.h  vulkanutils.cpp  vulkanutils.h
src/supereasyjson/: CMakeLists.txt  json.h
src/system/: CMakeLists.txt  config.cpp  config.h  errors.cpp  errors.h  log.cpp  log.h  stringutils.cpp  stringutils.h
tools/: update_copyright.py
